# slidecompress

./: README.md  pyproject.toml  slidecompress.py
