[project]
name = "slidecompress"
version = "0.1.1"
description = "Compress PowerPoint presentations by optimizing embedded images"
requires-python = ">=3.8"
authors = [
    {name = "S Anand", email = "root.node@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["powerpoint", "compression", "images", "optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Office/Business :: Office Suites",
]
urls = {Homepage = "https://github.com/sanand0/slidecompress"}

[project.scripts]
slidecompress = "slidecompress:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["slidecompress.py"]
